--- a/02-logistica.Rmd
+++ b/02-logistica.Rmd
@@ -59,6 +59,8 @@ output:
 
 - [**Jitsi link to make e-meetings**](https://meet.jit.si/intro-to-DS_UV_2020-21){target="_blank"}: Una room de Jitsi para hacer reuniones online. Seguramente la utilizaremos para las tutorías online.
 
+- [Screenleap](https://www.screenleap.com/){target="_blank"}: Por si nos hace falta compartir pantalla. 
+
 
 
 
