--- a/06-mas-cosas.Rmd
+++ b/06-mas-cosas.Rmd
@@ -41,7 +41,8 @@ Para descargaros el Rproject con el guión de cada sesión tienes que ejecutar e
 ```{r, eval = FALSE}
 file_to_download <- "clase_01.zip" 
 url <- paste0("https://github.com/perezp44/intro-ds-21-22-web/raw/master/guiones-de-clase/", file_to_download)
-download.file(url, destfile = file_to_download)
+#download.file(url, destfile = file_to_download)
+curl::curl_download(url, destfile = file_to_download, quiet = FALSE)
 unzip(zipfile = file_to_download)
 file.remove(file_to_download)
 ```
